Don't use a min-width to prevent zooming on small screens

--- a/app/css/frontend.css
+++ b/app/css/frontend.css
@@ -7,12 +7,6 @@
   margin-right: 24px;
 }
 
-body {
-    min-width: 450px;
-    width: auto !important;
-    width: 450px;
-}
-
 .btn-default:focus
 {
   background-color: #ffffff;
